// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`leaderboardEmbed, the worked example > is the design doc's nightly post 1`] = `
{
  "embeds": [
    {
      "color": 14721854,
      "fields": [
        {
          "name": "Top ten",
          "value": "\`1\` Lena · 1548 · 41 games
\`2\` Bilal · 1137 · 44 games
\`3\` Rami · 1062 · 39 games
\`4\` Iris · 990 · 38 games
\`5\` Karim · 987 · 40 games
\`6\` Omar · 917 · 42 games
\`7\` Hana · 882 · 37 games
\`8\` Theo · 831 · 38 games
\`9\` Nadia · 654 · 28 games
\`10\` Yuki · 534 · 24 games",
        },
      ],
      "footer": {
        "text": "Proven is your rating minus how unsure the board still is about you, and it settles after about 30 games.",
      },
      "timestamp": "2026-09-08T20:15:00.000Z",
      "title": "This week · leaderboard",
      "url": "https://customs.example/leaderboard?window=this-week",
    },
  ],
}
`;

exports[`resultEmbed, the worked example lost by the favourite > matches the layout in 05-design.md 1`] = `
{
  "embeds": [
    {
      "color": 15363945,
      "description": "Blue was favored 54%. Top damage: Lena, 47.3k.",
      "fields": [
        {
          "inline": true,
          "name": "Blue",
          "value": "\`top\` Hana · 1393 (-41)
\`jungle\` Iris · 1531 (-47)
\`mid\` Karim · 1508 (-43)
\`adc\` Bilal · 1668 (-45)
\`support\` Theo · 1372 (-47)",
        },
        {
          "inline": true,
          "name": "Red",
          "value": "\`top\` Omar · 1510 (+41)
\`jungle\` Rami · 1683 (+45)
\`mid\` Nadia · 1316 (+50)
\`adc\` Lena · 2127 (+39)
\`support\` Yuki · 1182 (+48)",
        },
        {
          "name": "​",
          "value": "MVP Lena · ACE Iris",
        },
      ],
      "footer": {
        "text": "Kustom · game 47",
      },
      "timestamp": "2026-09-08T21:09:12.000Z",
      "title": "Red wins · 34:12",
      "url": "https://customs.example",
    },
  ],
}
`;

exports[`resultEmbed, the worked example lost by the favourite > prints new rating and signed delta, one line per player > blue lines 1`] = `
[
  "\`top\` Hana · 1393 (-41)",
  "\`jungle\` Iris · 1531 (-47)",
  "\`mid\` Karim · 1508 (-43)",
  "\`adc\` Bilal · 1668 (-45)",
  "\`support\` Theo · 1372 (-47)",
]
`;

exports[`resultEmbed, the worked example lost by the favourite > prints new rating and signed delta, one line per player > red lines 1`] = `
[
  "\`top\` Omar · 1510 (+41)",
  "\`jungle\` Rami · 1683 (+45)",
  "\`mid\` Nadia · 1316 (+50)",
  "\`adc\` Lena · 2127 (+39)",
  "\`support\` Yuki · 1182 (+48)",
]
`;

exports[`teamsEmbed, the worked example > matches the layout in 05-design.md 1`] = `
{
  "embeds": [
    {
      "color": 14721854,
      "description": "Blue favored 54%. Everyone on a main role. Gap 100. Next best: swap Hana and Omar, gap 170.",
      "fields": [
        {
          "name": "Seats",
          "value": "Move to your side in the lobby.",
        },
        {
          "inline": true,
          "name": "Blue · 7695",
          "value": "\`top\` Hana · 1434
\`jungle\` Iris · 1578
\`mid\` Karim · 1551
\`adc\` Bilal · 1713
\`support\` Theo · 1419",
        },
        {
          "inline": true,
          "name": "Red · 7595",
          "value": "\`top\` Omar · 1469
\`jungle\` Rami · 1638
\`mid\` Nadia · 1266
\`adc\` Lena · 2088
\`support\` Yuki · 1134",
        },
        {
          "name": "Lobby",
          "value": "\`customs-night\` · password \`4471\`",
        },
      ],
      "footer": {
        "text": "Kustom · more on the tonight page",
      },
      "timestamp": "2026-09-08T20:15:00.000Z",
      "title": "Teams are set",
      "url": "https://customs.example",
    },
  ],
}
`;

exports[`windowSummaryEmbed, the closed window > is the milestone's weekly post 1`] = `
{
  "embeds": [
    {
      "color": 14721854,
      "description": "Sunday 6 Sep to Saturday 12 Sep · 14 rated games",
      "fields": [
        {
          "name": "Top ten",
          "value": "\`1\` Lena · 1548 · 41 games
\`2\` Bilal · 1137 · 44 games
\`3\` Rami · 1062 · 39 games
\`4\` Iris · 990 · 38 games
\`5\` Karim · 987 · 40 games
\`6\` Omar · 917 · 42 games
\`7\` Hana · 882 · 37 games
\`8\` Theo · 831 · 38 games
\`9\` Nadia · 654 · 28 games
\`10\` Yuki · 534 · 24 games",
        },
      ],
      "footer": {
        "text": "Proven is your rating minus how unsure the board still is about you, and it settles after about 30 games.",
      },
      "timestamp": "2026-09-08T20:15:00.000Z",
      "title": "Last week · leaderboard",
      "url": "https://customs.example/leaderboard?window=last-week",
    },
  ],
}
`;
